--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"@prisma/client": "^4.15.0",
 		"dotenv": "^16.1.3",
 		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.0"
+		"jsonwebtoken": "^9.0.0",
+		"nodemailer": "^6.9.3"
 	},
 	"devDependencies": {
 		"prisma": "^4.15.0"
